# docmanager-

./: .gitignore  docker-compose.yml
backend/: pyproject.toml
backend/app/: database.py  main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/models/: __init__.py  categories.py  consommations_tokens.py  document.py  logs.py  preferences_utilisateur_dashboard.py  utilisateurs.py  versions.py
backend/app/routers/: auth.py  categories.py  documents.py
backend/app/schemas/: categorie.py  document.py  utilisateur.py
backend/app/services/: agent_service.py  auth_service.py  categorie_service.py  document_service.py  extraction.py
docker/postgres/: init.sql
docs/: cahier_des_charges.md  mcd.md  uml.md
docs/design/: README.md  ecrans.md
docs/design/mockups/: slitch-v1.html  v1-table-dense.html  v10-register.html  v2-cards-compact.html  v3-split-view.html  v4-glass-minimal.html  v5-glass-cards.html  v6-glass-split.html  v7-notion-grid.html  v8-notion-grid-full.html  v9-login.html
docs/design/prds/: 01-mes-documents.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppShell.tsx  AppSidebar.tsx  CategorieCard.tsx  CategorieRow.tsx  DocumentDetailPanel.tsx  DocumentInlinePanel.tsx  DocumentRow.tsx  DocumentsTable.tsx  NewCategorieModal.tsx  ProtectedRoute.tsx  ReorgModal.tsx  SuggestionsModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCategories.ts  useDebounce.ts  useDocuments.ts  useSearchDocuments.ts  (+2 more)
(+7 files in other folders)
